[tool.poetry]
name = "my-lib"
version = "0.1.0"
description = ""
authors = ["stfdxv <stepanov.s@umno.digital>"]
readme = "README.md"
packages = [{include = "my_lib", from = "src"}]

[tool.poetry.dependencies]
python = "3.12.*"
cowsay = "^6.1"


[tool.poetry.group.dagster.dependencies]
dagster-pipes = "^1.6.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
